Se crean los primero pasos para una estructura de proyecto por ontrolador router
