# EchoApp/controllers/test.go
@@ -1,0 +1,15 @@
+package controllers
+
+import (
+	"errors"
+	"fmt"
+)
+
+func HelloWorld(nombre string) (string, error) {
+	if nombre == "" || nombre == "ERROR" {
+		return nombre, errors.New("error en el nombre")
+	}
+	rtn := fmt.Sprintf("Hola %s!", nombre)
+	return rtn, nil
+
+}
